# agg-lms

./: .gitignore  README.md  pyproject.toml
agg_lms/: core.py  nn.py  optimiser.py  predictor.py  train.py  utils.py
agg_lms/backbone/: gpt.py
agg_lms/datasets/: huggingface.py  registry.py
scratch/: inspect_gelu.py
scripts/: download_and_convert_data.py  run_train_vanilla_lm.py
