[project]
name = "agg-lms"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Daniel Tan", email = "dtch1997@users.noreply.github.com"},
]
dependencies = ["torch>=2.5.1", "numpy>=2.1.3", "transformers>=4.46.2", "datasets>=3.1.0", "tiktoken>=0.8.0", "wandb>=0.18.7", "tqdm>=4.67.0", "jaxtyping>=0.2.34", "einops>=0.8.0", "pytorch-lightning>=2.4.0", "ipykernel>=6.29.5"]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
